src/test/deca/context/invalid/resultats/test_polymorphisme-cont.res
./src/test/deca/context/invalid/test_polymorphisme.deca:31:18: The method getS is not defined for the class A
